test/tests/errors/error-trap-decs-forgotten.sm
// true
// false
/**/
/**/

program {
    trap {
        var x = 1;
        escapeto a;
a:
        output x;
    }
}